<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/product_pricing"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/cardview_shadow_start_color" />


            <ListView
                android:id="@+id/productList"
                android:layout_width="match_parent"
                android:layout_height="0sp"></ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10sp"
                    android:layout_marginEnd="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150sp"
                        android:layout_marginLeft="2sp"

                        android:layout_marginBottom="5sp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:text="@string/item_name"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:background="@drawable/button_border"
                        android:id="@+id/item_name"
                        android:padding="5sp"
                        android:layout_width="150sp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:hint="@string/hint_item_name"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20sp"
                    android:layout_marginEnd="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150sp"
                        android:layout_marginLeft="2sp"
                        android:layout_marginBottom="5sp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:text="@string/item_price"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:background="@drawable/button_border"
                        android:padding="5sp"
                        android:id="@+id/item_price"
                        android:layout_width="150sp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:hint="@string/hint_item_price"
                        android:maxLines="1" />
                </LinearLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/addItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/product_button_shape"
                        android:src="@drawable/ic_baseline_add_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/cardview_shadow_start_color" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>